# wechsel

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_Ubuntu  LICENSE  README.md  build_with_old_rust  run_tests  rust-wechsel.spec
config_files/: default_bash_config  default_fish_config  default_on_prj_change
debian/: cargo-checksum.json  changelog  control  copyright  rules  watch
debian/tests/: control
src/: change.rs  default_on_prj_change  init.rs  lib.rs  main.rs  migrate.rs  new.rs  tree.rs  utils.rs
src/tests/: migration.rs  mod.rs  test.rs  utils.rs
wechsel_testing/: Cargo.toml
wechsel_testing/src/: main.rs  migration.rs  utils.rs
