[package]
name = "wechsel"
version = "0.2.2"
edition = "2024"
rust-version = "1.88"
authors = ["JustSomeRandomUsername"]
repository = "https://github.com/JustSomeRandomUsername/wechsel"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-utilities"]
keywords = ["organizing", "project"]
description = "Organize your Computer with projects."

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
inquire = "0.7.4"

[profile.release]
debug=false


[dev-dependencies]
rand = "0.9.0"
walkdir = "2.4"
