[package]
name = "wechsel"
version = "0.2.4"
edition = "2024"
rust-version = "1.88"
authors = ["JustSomeRandomUsername"]
repository = "https://github.com/JustSomeRandomUsername/wechsel"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["organizing", "project"]
description = "Organize your Computer with projects."

[dependencies]
clap = { version = "4.5.4", features = ["std", "derive", "help"], default-features = false}
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = "1.0.115"
dialoguer = { default-features = false, version = "0.12.0"}

[profile.release]
debug=false

[dev-dependencies]
rand = "0.9.0"
walkdir = "2.4"