[package]
name = "wechsel"
version = "0.2.4"
edition = "2021"
rust-version = "1.74.1"
authors = ["JustSomeRandomUsername"]
repository = "https://github.com/JustSomeRandomUsername/wechsel"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["organizing", "project"]
description = "Organize your Computer with projects."

[workspace]
resolver = "2"
members = ["wechsel_testing"]

[lib]

[dependencies]
clap = { version = "4.5.4", features = ["std", "derive", "help"], default-features = false}
dirs = ">=5.0.1, < 7.0.0" 
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = "1.0.115"
dialoguer = { default-features = false, version = "0.11.0"}

[profile.release]
debug=false

[features]
default=[]
deserial=[]
