[package]
name = "wechsel_testing"
version = "0.2.4"
edition = "2021"
rust-version = "1.74"
authors = ["JustSomeRandomUsername"]
repository = "https://github.com/JustSomeRandomUsername/wechsel"
readme = "README.md"
license = "MIT"
description = "Testing for the wechsel cli tool"

[dependencies]
clap = { version = "4.5.4", features = ["std", "derive", "help"], default-features = false}
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = "1.0.115"
dialoguer = { default-features = false, version = "0.11.0"}
wechsel = { path = "../", features = ["deserial"] }
rand = "0.9.0"
walkdir = "2.4"
